--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,6 +5,6 @@ procesar:
 
 procesarInventario:
     type: rest
-    resource: App\Controller\InventariosWSController
-
+    resource: App\Controller\InventarioWSController
+#    controller: App\Controller\DefaultController::index
 
