Commit de los repositorios, emtidades, y servicios de todas las tablas que se usaran en el esquema de login de usuario Nota. Sin validaciones

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,4 +7,7 @@ procesarInventario:
     type: rest
     resource: App\Controller\InventariosWSController
 
-
+procesarLogin:
+    type: rest
+    resource: App\Controller\LoginWSController
+#   controller: App\Controller\DefaultController::index
